# arrayalgebra

./: .gitignore  CMakeLists.txt  arrayalgebra.h  transformations.h
benchmark/: multiplication.cc
